--- a/Voter/app/src/main/res/values/strings.xml
+++ b/Voter/app/src/main/res/values/strings.xml
@@ -1,4 +1,31 @@
 <resources>
     <string name="app_name">Voter</string>
     <string name="action_settings">Settings</string>
+    <string name="another_call_in_progress">Another call is in progress</string>
+    <string name="your_phone_number">Your phone number</string>
+
+    <string name="status_validating_input">Status: Validating Input</string>
+    <string name="status_connecting">Status: Connecting to VoltDB</string>
+    <string name="status_connected">Status: Connected to VoltDB</string>
+    <string name="status_calling">Status: Calling VoltDB</string>
+    <string name="status_voltdb">Status: VoltDB call </string>
+    <string name="status_call_cancelled">Status: Call cancelled</string>
+
+    <string name="no_geo_location_permissions">Do nott have Geo Location Permissions </string>
+    <string name="empty_phone">Phone String is empty</string>
+    <string name="failed_to_connect">Failed to connect to VoltDB. Please verify the URL</string>
+    <string name="vote_limit_exceeded">Vote limit is exceeded</string>
+    <string name="voltdb_error">VoltDB procedure error</string>
+
+    <string name="success">Success</string>
+
+    <string name="invalid_phone">Invalid Phone Number</string>
+    <string name="invalid_contestant_id">Invalid Contestant ID</string>
+    <string name="invalid_contestant">Invalid contestant</string>
+    <string name="invalid_location">Invalid Location</string>
+    <string name="invalid_port">Invalid VoltDB Port</string>
+
+    <string name="longitude">Longitude: </string>
+    <string name="latitude">Latitude: </string>
+
 </resources>
